@@ -1,3 +1,8 @@
+2010-04-15 Sergio Martin <sergio.martin@artica.es>
+
+        * godmode/users/configure_user.php: fixed bug 2987162. Validation 
+	  of create a user with User ID null
+
 2010-04-15 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_html.php: added check new attribute "styleTable" to
